--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Cosmic - Solar System Simulator">
+    <meta name="author" content="Alan Maizon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solar System</title>
     <style>
